Переделал домашнее задание